--- a/ClientApp/client-app/src/styles.css
+++ b/ClientApp/client-app/src/styles.css
@@ -23,3 +23,7 @@ html, body{
   color: #fff;
   margin-left: 1rem;
 }
+.mdl-button.button--colored-excel:not([disabled]).mdl-button--raised, .mdl-button.button--colored-excel:not([disabled]).mdl-button--raised:hover {
+  background-color: #069f0f;
+  color: #fff;
+}
