--- a/ClientApp/client-app/src/app/components/project-flow/project-flow.component.html
+++ b/ClientApp/client-app/src/app/components/project-flow/project-flow.component.html
@@ -14,7 +14,7 @@
                                         <div class="package-number">{{item.order}}</div>
                                     </div>
                                     <div class="bd-highlight">
-                                        <div class="package-name">{{item.label}}</div>
+                                        <div class="package-name">{{item.biddingPackageName}}</div>
                                         <small class="pl-10px" *ngIf="item.currentNumberDocument == item.totalDocument">
                                             <span class="text-success">
                                                 <span class="material-icons" style="font-size: 16px;">check_circle</span>
