--- a/ClientApp/client-app/src/app/components/document-setting/document-setting.component.html
+++ b/ClientApp/client-app/src/app/components/document-setting/document-setting.component.html
@@ -13,7 +13,7 @@
             </div>
             <p-tree [value]="packageDocument">
                 <ng-template let-node pTemplate="default">
-                    <input type="text" pInputText class="p-inputtext-sm order mr-3" [value]="getOrder(node.data)" [disabled]="!node.isCommon && (node.isDisabled === undefined || node.isDisabled)" [(ngModel)]="node.order" *ngIf="!node.isParent" />
+                    <input type="text" pInputText class="p-inputtext-sm order mr-3" [value]="(isInitDocument ? node.order : getOrder(node))" (ngModelChange)="changeOrder($event, node)"  [disabled]="!node.isCommon && (node.isDisabled === undefined || node.isDisabled)" [(ngModel)]="node.order" *ngIf="!node.isParent" />
                     <p-checkbox name="groupname" [value]="node.data" (onChange)="checkboxChange($event, node)" [(ngModel)]="packageDocumentSelected" [disabled]="node.isParent || node.isCommon" [label]="node.label"></p-checkbox>
                 </ng-template>
             </p-tree>
