--- a/ClientApp/client-app/src/app/components/users/login/login.component.html
+++ b/ClientApp/client-app/src/app/components/users/login/login.component.html
@@ -3,9 +3,9 @@
         <div class="d-flex">
             <div class="col-lg-6">
                 <div class="card1 pb-5">
-                    <div class="row"><img src="https://i.imgur.com/CXQmsmF.png" class="logo" /></div>
+                    <div class="row"><img src="/assets/images/login-top.png" class="logo" /></div>
                     <div class="row px-3 justify-content-center mt-4 mb-5 border-line"><img
-                            src="https://i.imgur.com/uNGdWHi.png" class="image" /></div>
+                            src="/assets/images/login-img.png" class="image" /></div>
                 </div>
             </div>
             <div class="col-lg-6">
