--- a/ClientApp/client-app/src/app/components/project-flow/project-flow.component.html
+++ b/ClientApp/client-app/src/app/components/project-flow/project-flow.component.html
@@ -9,12 +9,12 @@
                     <div class="col-lg-3">
                         <div class="package-group">
                             <div class="package-item" *ngFor="let item of packages">
-                                <div class="d-flex bd-highlight h-100 pl-10px">
-                                    <div class="bd-highlight">
+                                <div class="d-flex bd-highlight h-100 pl-10px currsor-pointer" (click)="setActiveIndex(item)">
+                                    <div class="bd-highlight currsor-pointer">
                                         <div class="package-number">{{item.order}}</div>
                                     </div>
-                                    <div class="bd-highlight">
-                                        <div class="package-name">{{item.label}}</div>
+                                    <div class="bd-highlight currsor-pointer">
+                                        <div class="package-name currsor-pointer">{{item.label}}</div>
                                         <small class="pl-10px" *ngIf="(item.currentDocumentCount == item.documentCount) && (item.documentCount != 0)">
                                             <span class="text-success">
                                                 <span class="material-icons" style="font-size: 16px;">check_circle</span>
@@ -148,6 +148,12 @@
                         <div class="col-lg-12">
                             <textarea pInputTextarea formControlName="documentAbstract" class="w-100"
                                 placeholder="Trích yếu..."></textarea>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label class="col-lg-12 lh-30px"></label>
+                        <div class="col-lg-12">
+                            <p-checkbox name="main" formControlName="isMainDocument" [binary]="true" label="Văn bản chính"></p-checkbox>
                         </div>
                     </div>
                 </div>
