--- a/ClientApp/client-app/src/app/components/document/document.component.html
+++ b/ClientApp/client-app/src/app/components/document/document.component.html
@@ -27,7 +27,7 @@
                 <thead>
                     <tr>
                         <th class="mdl-data-table__cell--non-numeric text-center">STT</th>
-                        <th class="mdl-data-table__cell--non-numeric">Tên gói thầu</th>
+                        <th class="mdl-data-table__cell--non-numeric">Tên văn bản</th>
                         <th class="mdl-data-table__cell--non-numeric w-50px">Thao tác</th>
                     </tr>
                 </thead>
@@ -67,10 +67,6 @@
             <label class="col-lg-12 lh-30px">Gói thầu</label>
             <div class="col-lg-12">
                 <p-dropdown [options]="packages" formControlName="biddingPackageId" optionValue="biddingPackageId" optionLabel="biddingPackageName" styleClass="w-100"></p-dropdown>
-                <div class="error pl-0" *ngIf="(form.biddingPackageId.touched || isSubmit)">
-                    <p class="text-danger" *ngIf="form.biddingPackageId.errors?.required">Gói thầu không thể để
-                        trống</p>
-                </div>
             </div>
         </div>
         <div class="form-group">
