--- a/ClientApp/client-app/src/app/components/dashboard/dashboard.component.html
+++ b/ClientApp/client-app/src/app/components/dashboard/dashboard.component.html
@@ -5,8 +5,8 @@
             <h2 class="mdl-card__title-text"></h2>
         </div>
         <div class="mdl-card__supporting-text w-100">
-            Biểu đồ thống kê dự án số lượng dự án theo tình trạng:
-            <div class="col-lg-12 mt-5">
+            <!-- Biểu đồ thống kê dự án số lượng dự án theo tình trạng: -->
+            <!-- <div class="col-lg-12 mt-5">
                 <div class="row">
                     <div class="col-lg-6 text-center text-white" style="border-right: 2px solid #fff">
                         <p-chart type="doughnut" [data]="data" [options]="option" [style]="{'width': '10%'}"></p-chart>
@@ -18,7 +18,7 @@
                         <div>Số dự án đã hoàn thành: <b>{{staticalData.numberProjectComplete}} Dự án - ({{staticalData.ratioProjectComplete + "%"}})</b></div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
 </div>
